# cookiecutter-hl-kustomize

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: README.md
{{cookiecutter.project_name}}/components/app/: deployment.yaml  ingress.yaml  kustomization.yaml
{{cookiecutter.project_name}}/components/db/: kustomization.yaml  statefulset.yaml
{{cookiecutter.project_name}}/components/redis/: kustomization.yaml
{{cookiecutter.project_name}}/installs/default/: app-config.env  db-config.env  db-connect.env  kustomization.yaml  raw-db-secret.yaml
