[tool.poetry]
name = "cookiecutter-kustomize"
version = "0.1.0"
description = "A template for making kustomize gitops repos"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
